Upgrade MapStruct version from 1.3.0.Final to 1.3.1.Final. Eliminated some warnings